--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ eshell
 eclipse.jdt.ls
 eglot-eclipse-jdt-cache
 elisp_notes.txt
+workspace
+elpa
+eshell
+transient
+var
+network-security.data
+.lsp-session-v1
